# minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/shaders/: lighting.fs
resources/textures/: atlas.png~  dirt.png~  dirt_unused.png~  grass.png~
src/: Chunk.cpp  Chunk.hpp  Game.cpp  Game.hpp  Menu.cpp  Perf.hpp  Player.cpp  Player.hpp  TextureAtlas.hpp  UtilityStructures.hpp  chunk.cpp  chunk.hpp  game.cpp  game.hpp  main.cpp  menu.cpp  utilityStructures.hpp
src/common/: UtilityStructures.hpp  UtilityTypes.hpp
src/game/: Chunk.cpp  Chunk.hpp  Game.cpp  Game.hpp  PerlinNoise.c  PerlinNoise.cpp  PerlinNoise.h  PerlinNoise.hpp  Player.cpp  Player.hpp
src/game/block/: Block.cpp  Block.hpp  BlockData.hpp  BlockType.hpp
src/menu/: Menu.cpp
